--- a/FRONTEND/src/pages/Home/Home.css
+++ b/FRONTEND/src/pages/Home/Home.css
@@ -85,9 +85,6 @@
   }
 }
 
-/* Media Queries for Responsiveness */
-
-/* For tablets (max-width: 1024px) */
 @media (max-width: 1024px) {
   .hero-section {
       padding: 30px 50px;
@@ -111,7 +108,6 @@
   }
 }
 
-/* For mobile devices (max-width: 768px) */
 @media (max-width: 768px) {
   .hero-section {
       flex-direction: column;
@@ -149,7 +145,6 @@
   }
 }
 
-/* For smaller mobile devices (max-width: 480px) */
 @media (max-width: 480px) {
   .hero-section {
       flex-direction: column;
@@ -186,7 +181,7 @@
   .hero-image img {
       max-width: 100%;
       height: auto;
-      object-fit: contain; /* Ensures the image is fully visible without cropping */
+      object-fit: contain; 
   }
 
   .clients-section h2 {
